# ui/src/api/openapi.json
@@ -4602,10 +4602,12 @@
             "type": "string",
             "title": "Id"
           },
-          "preliminaries": {
-            "type": "string",
-            "pattern": "^(?!^[-+.]*$)[+-]?0*\\d*\\.?\\d*$",
-            "title": "Preliminaries"
+          "preliminary_items": {
+            "items": {
+              "$ref": "#/components/schemas/PreliminaryOut"
+            },
+            "type": "array",
+            "title": "Preliminary Items"
           },
           "overheads": {
             "type": "string",
@@ -4638,7 +4640,7 @@
         "type": "object",
         "required": [
           "id",
-          "preliminaries",
+          "preliminary_items",
           "overheads",
           "profit",
           "adjustment",
@@ -5149,6 +5151,42 @@
           "has_text"
         ],
         "title": "PageOut"
+      },
+      "PreliminaryOut": {
+        "properties": {
+          "item": {
+            "type": "string",
+            "title": "Item"
+          },
+          "quantity": {
+            "type": "string",
+            "pattern": "^(?!^[-+.]*$)[+-]?0*\\d*\\.?\\d*$",
+            "title": "Quantity"
+          },
+          "unit": {
+            "type": "string",
+            "title": "Unit"
+          },
+          "rate": {
+            "type": "string",
+            "pattern": "^(?!^[-+.]*$)[+-]?0*\\d*\\.?\\d*$",
+            "title": "Rate"
+          },
+          "cost": {
+            "type": "string",
+            "pattern": "^(?!^[-+.]*$)[+-]?0*\\d*\\.?\\d*$",
+            "title": "Cost"
+          }
+        },
+        "type": "object",
+        "required": [
+          "item",
+          "quantity",
+          "unit",
+          "rate",
+          "cost"
+        ],
+        "title": "PreliminaryOut"
       },
       "PricedItem": {
         "properties": {
